# cloudx-course

./: .gitignore  pyproject.toml
src/: main.py
tests/: test_app.py
