[project]
name = "backend-ec2-cloudx-demo"
version = "0.1.0"
description = "Demo server for aws cloudx course"
requires-python = ">=3.10"
dependencies = [
  "fastapi[standard]",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
